--- a/Data Structure/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/Data Structure/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{68762e02-16b1-4385-bfe5-debc0a17a85e}</ProjectGuid>
     <RootNamespace>ConsoleApplication1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>链表</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
