--- a/Data Structure/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
+++ b/Data Structure/ConsoleApplication1/ConsoleApplication1.vcxproj.filters
@@ -21,5 +21,14 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="binarytree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="queue.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="源.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
