--- a/Data Structure/ShellSort/ShellSort.vcxproj.filters
+++ b/Data Structure/ShellSort/ShellSort.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ShellSort.cpp">
+    <ClCompile Include="SortFunction.h">
+      <Filter>头文件</Filter>
+    </ClCompile>
+    <ClCompile Include="SortFunction.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="InsertSort.cpp">
+    <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
