--- a/Data Structure/ShellSort/ShellSort.vcxproj
+++ b/Data Structure/ShellSort/ShellSort.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{CF4D3857-A5A9-453E-A752-13665D633414}</ProjectGuid>
     <RootNamespace>ShellSort</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Sort</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -138,8 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="InsertSort.cpp" />
-    <ClCompile Include="ShellSort.cpp" />
+    <ClCompile Include="SortFunction.cpp" />
+    <ClCompile Include="SortFunction.h" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
